# pyin

./: .gitignore  .travis.yml  CHANGES.md  Cookbook.md  Cookbook.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  docs.rst  pyin.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: tests.yml
pyin/: __init__.py  __main__.py  _compat.py  base.py  cli.py  core.py  evaluate.py  exceptions.py  expressions.py  operations.py
pyin/operations/: __init__.py  base.py  builtins.py  csv.py  eval.py  filter.py  iter.py  json.py  stream.py  text.py
sample-data/: csv-with-header.csv
tests/: __init__.py  _test_module.py  conftest.py  module.py  test_cli.py  test_compile.py  test_core.py  test_eval.py  test_evaluate.py  test_expressions.py  test_importer.py  test_normalize_expressions.py  test_operations.py  test_operations_machinery.py  test_pyin.py
